2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (graph.complementer) : added
	* interfaces/R/src/rinterface.c (R_igraph_complementer) : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (graph.difference, "%m%") : added
	* interfaces/R/src/rinterface.c (R_igraph_difference) : added

2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R 
	(igraph.union, igraph.disjoint.union) : first renamed to second 
	(igraph.union, "%u%") : added
	* interfaces/R/src/rinterface.c	
	(R_igraph_union, R_igraph_disjoint_union) : first renamed to second
	(R_igraph_union) : added
	
2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (graph.intersection, "%s%") : added
	("%u%", "%du%") : "%u%" renamed to "%du%"
	* interfaces/R/src/rinterface.c (R_igraph_intersection) : added
	(R_igraph_union) : updated

2006-02-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (igraph.union, "%u%") : added
	* interfaces/R/src/rinterface.c (R_igraph_union) : added

2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph.ncol) : updated
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_ncol) : updated

2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.merge) : added
	* interfaces/R/src/rinterface.c (R_igraph_layout_merge_dla) : added

2006-02-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/topology.R (graph.isocreate) : added
	* interfaces/R/igraph/R/motifs.R (graph.motifs.est) : added
	* interfaces/R/src/rinterface.c (R_igraph_motifs_randesu_estimate)
	(R_igraph_isoclass_create) : added

2006-02-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R
	(get.all.shortest.paths) : added
	* interfaces/R/src/rinterface.c (R_igraph_get_all_shortest_paths) :
	added
