@@ -119,4 +119,5 @@ export(graph.isoclass, graph.isomorphic, graph.motifs,
 # operators
 
 export(graph.disjoint.union, "%du%", graph.intersection, "%s%",
-       graph.union, "%u%", graph.difference, "%m%", graph.complementer)
+       graph.union, "%u%", graph.difference, "%m%",
+       graph.complementer, graph.compose, "%c%")
